fixed footer bug with text overflowing

--- a/style.css
+++ b/style.css
@@ -207,7 +207,7 @@ img {
 footer {
     background-color: whitesmoke;
     width: 100%;
-    height: 130px;
+    height: 140px;
     display: flex;
     gap: 10px;
     border-radius: 5px 5px 0px 0px;
